--- a/project_kestrel/project_kestrel.ioc
+++ b/project_kestrel/project_kestrel.ioc
@@ -8,26 +8,30 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F411CEU6
 Mcu.Family=STM32F4
 Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USB_DEVICE
-Mcu.IP5=USB_OTG_FS
-Mcu.IPNb=6
+Mcu.IP1=I2C2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USB_DEVICE
+Mcu.IP6=USB_OTG_FS
+Mcu.IPNb=7
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin2=PB15
-Mcu.Pin3=PA11
-Mcu.Pin4=PA12
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=PB8
-Mcu.Pin8=PB9
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.Pin10=PB8
+Mcu.Pin11=PB9
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin2=PB10
+Mcu.Pin3=PB13
+Mcu.Pin4=PB15
+Mcu.Pin5=PA11
+Mcu.Pin6=PA12
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB3
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -53,8 +57,14 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB13.Locked=true
+PB13.Signal=GPIO_Output
 PB15.Locked=true
 PB15.Signal=GPIO_Output
+PB3.Mode=I2C
+PB3.Signal=I2C2_SDA
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
@@ -105,7 +115,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
